kubernetes/main/apps/calico-system/calico/addons/whisker/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisker
  namespace: calico-system
spec:
  ingressClassName: internal
  rules:
    - host: &host whisker.${CLUSTER_DOMAIN}
      http:
        paths:
        - backend:
            service:
              name: whisker
              port:
                number: 8081
          path: /
          pathType: Prefix
  tls:
    - hosts: [*host]
