kubernetes/main/apps/calico-system/calico/addons/whisker/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisker-ingress
  namespace: calico-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: nginx
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: whisker
      ports:
        - protocol: TCP
          port: 8081
  policyTypes:
    - Ingress
    - Egress
